Fixed Word Wrap in posts/ Added timestamp to post [how long ago post was added]/ Added Pipe

--- a/src/app/components/post/post.component.scss
+++ b/src/app/components/post/post.component.scss
@@ -2,3 +2,7 @@ ion-icon {
     margin: 0 48px 0 48px;
     font-size: 28px;
 }
+
+.timestamp {
+    font-size: 0.8em;
+}
